--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -660,28 +660,30 @@ footer.sticky-bottom {
 .publications {
   margin-top: 2rem;
 
-  h1 {
-    color: var(--global-theme-color);
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
+  // Year divider
+  // h1 {
+  //   color: var(--global-theme-color);
+  //   font-size: 2rem;
+  //   text-align: center;
+  //   margin-top: 1em;
+  //   margin-bottom: 1em;
+  // }
 
-  h2 {
-    margin-bottom: 1rem;
+  // h2 {
+  //   margin-bottom: 1rem;
 
-    span {
-      font-size: 1.5rem;
-    }
-  }
+  //   span {
+  //     font-size: 1.5rem;
+  //   }
+  // }
 
   h2.bibliography {
-    color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
-    padding-top: 1rem;
-    margin-top: 2rem;
-    text-align: right;
+    // color: var(--global-divider-color);
+    // border-top: 1px solid var(--global-divider-color);
+    // padding-top: 1rem;
+    // margin-top: 2rem;
+    // text-align: right;
+    display: none;
   }
 
   ol.bibliography {
@@ -693,6 +695,8 @@ footer.sticky-bottom {
       margin-bottom: 1rem;
 
       .preview {
+        width: 180px;
+        height: auto;
       }
 
       .abbr {
