--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,8 +5,7 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">
       {% if site.title == 'blank' %}
-        <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
-        {{ site.last_name }}
+        <span class="font-weight-bold">{{ site.first_name }} {{ site.last_name }}</span>
       {% else %}
         {{ site.title }}
       {% endif %}
@@ -118,29 +117,37 @@ layout: default
   </section>
 
     <!-- Projects Section -->
-    <section id="projects">
-      <h3>Projects</h3>
-      <div class="projects-list">
-        {% for project in site.projects %}
-          <div class="project-card">
-            <div class="project-image">
-              {% if project.img %}
-                <img src="{{ project.img | relative_url }}" alt="{{ project.title }}" width="130" height="130">
-              {% else %}
-                
-              {% endif %}
-            </div>
-            <div class="project-content">
-              <h3>{{ project.title }}</h3>
-              <p class="project-meta">
-                [{{ project.category | capitalize }}] {% if project.related_publications %} @ Related Publications {% endif %}
-              </p>
-              <p class="project-description">{{ project.description }}</p>
-            </div>
-          </div>
-        {% endfor %}
-      </div>
-    </section>
+    <section id="projects" class="projects">
+    <h3>Projects</h3>
+    <div class="projects-list">
+      {% for proj in site.projects %}
+        <table style="padding-top: 20px; width: 100%; border: 0px; border-spacing: 0px; border-collapse: separate; margin-right: auto; margin-left: auto;">
+          <tbody>
+            <tr>
+              <!-- Image Column -->
+              <td style="padding-right: 20px; width: 20%; vertical-align: middle;">
+                {% if proj.img %}
+                  <img src="{{ proj.img | relative_url }}" alt="{{ proj.title }}" width="160" height="160">
+                {% else %}
+
+                {% endif %}
+              </td>
+              
+              <!-- Text Column -->
+              <td width="75%" valign="middle">
+                <p>
+                  <strong>{{ proj.title }}</strong>
+                </p>
+                <p1>
+                  {{ proj.description }}
+                </p1>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      {% endfor %}
+    </div>
+  </section>
 
 
     <!-- News -->
