Add subtitles to projects and globe bot

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -152,9 +152,11 @@ layout: default
 
               <!-- Text Column -->
               <td width="75%" valign="middle">
-                <p>
+
                   <strong>{{ proj.title }}</strong>
-                </p>
+                  <p style="font-size: smaller; color: gray;"> {{proj.subheading}} <a href={{proj.project_url}} target="_blank">{{proj.url_text}}</a></p>
+                
+
                 <p1>
                   {{ proj.description }}
                 </p1>
