Fix linter errors with prettier

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -48,7 +48,7 @@
   <div id="{{ entry.key }}" class="{% if site.enable_publication_thumbnails %}col-sm-8{% else %}col-sm-10{% endif %}">
     <!-- Title -->
     <strong>
-    <div class="title">{{ entry.title }}</div>
+      <div class="title">{{ entry.title }}</div>
     </strong>
     <!-- Author -->
     <div class="author">
@@ -57,8 +57,8 @@
       {% assign author_array_limit = author_array_size %}
 
       {%- for author in entry.author_array limit: author_array_limit -%}
-        {%- assign author_full_name = author.first | append: " " | append: author.last -%}
-        {% if author_full_name == "Kevin Angers" %}
+        {%- assign author_full_name = author.first | append: ' ' | append: author.last -%}
+        {% if author_full_name == 'Kevin Angers' %}
           {% assign author_is_self = true %}
         {% else %}
           {% assign author_is_self = false %}
@@ -81,11 +81,11 @@
         <span class="author-name {% if author_is_self %}self-author{% endif %}">
           {% if author_is_self %}
             <strong>
-              {{- author.first }} 
+              {{- author.first }}
               {{ author.last -}}
             </strong>
           {% else %}
-            {{- author.first }} 
+            {{- author.first }}
             {{ author.last -}}
           {% endif %}
         </span>
